# pondasi

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg.json
example/: CMakeLists.txt
example/basic-modular-app/: CMakeLists.txt  main.cpp
pondasi/: CMakeLists.txt
pondasi/app/: CMakeLists.txt  app.cpp  app.hpp  modular_app.cpp  modular_app.hpp  simple_app.cpp  simple_app.hpp
pondasi/encoding/: CMakeLists.txt  json.cpp  json.hpp  json_test.cpp
pondasi/logger/: CMakeLists.txt  logger.cpp  logger.hpp  spdlog_logger.cpp  spdlog_logger.hpp
pondasi/meta/: CMakeLists.txt  metadata.hpp  metadata_test.cpp  nameof.hpp  nameof_test.cpp  reflect.hpp  type_tag.hpp  typeid.hpp  typeid_test.cpp
pondasi/sync/: CMakeLists.txt  channel.hpp  mpmc.cpp  mpsc.hpp  spsc.hpp
pondasi/utility/: CMakeLists.txt  error.hpp  result.hpp  result_test.cpp
